--- a/_includes/themes/minimalber/post.html
+++ b/_includes/themes/minimalber/post.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="span8">
+    <div class="col-md8">
       {{ content }}
       <hr>
       <div class="pagination">
@@ -26,7 +26,7 @@
       {% include JB/comments %}
     </div>
     
-    <div class="span4">
+    <div class="col-md-4">
       <h4>Published</h4>
       <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
 
