--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -54,7 +54,7 @@
 
   <body>
 
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="brand" href="{{ HOME_PATH }}">RICHARD LITTAUER<!--{{ site.title }}--></a>
@@ -62,7 +62,7 @@
        </div> <!-- /navbar-inner -->
      </div> <!-- /navbar -->
 
-     <div class="container-fluid row-fluid span12 hero"></div>
+     <div class="container-fluid row-fluid col-md-12 hero"></div>
 
 
     <div class="wrapper">
@@ -94,7 +94,6 @@
     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
     <script src="{{ HOME_PATH }}assets/js/jquery.js"></script>
     <script src="{{ HOME_PATH }}assets/js/bootstrap.min.js"></script>
-    <script src="{{ HOME_PATH }}assets/js/switch.js"></script>
 
     {% include JB/analytics %}
 
