--- a/_includes/themes/minimalber/page.html
+++ b/_includes/themes/minimalber/page.html
@@ -3,8 +3,8 @@
 </div>
 
 <div class="container-fluid row-fluid">
-	<div class="span8">
+	<div class="col-md-8">
 	{{ content }}
 	</div>
-	<div class="span4"></div>
+	<div class="col-md-4"></div>
 </div>
