--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : twitter
+  name : minimalber
 ---
 {% include JB/setup %}
-{% include themes/twitter/index.html %}
+{% include themes/minimalber/index.html %}
