Remove hero, dead comment

--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -57,13 +57,10 @@
     <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="{{ HOME_PATH }}">RICHARD LITTAUER<!--{{ site.title }}--></a>
+          <a class="brand" href="{{ HOME_PATH }}">RICHARD LITTAUER</a>
          </div> <!-- /container -->
        </div> <!-- /navbar-inner -->
      </div> <!-- /navbar -->
-
-     <div class="container-fluid row-fluid col-md-12 hero"></div>
-
 
     <div class="wrapper">
 
