Moved styling to Sass, some html edits, added descriptions

--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -64,7 +64,7 @@
 
     <div class="wrapper">
 
-    <div class="container">
+    <div class="container subpage">
 
       <div class="content">
         {{ content }}
