--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -38,8 +38,9 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+    <link href="{{ HOME_PATH }}assets/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href="{{ HOME_PATH }}assets/css/custom.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -52,36 +53,6 @@
   </head>
   <body id="index">
     <div class="wrapper">
-
-    <style type="text/css">
-      h1 {
-        font-size: 2em;
-        margin: 10% 0 0 30px;
-        color: #444;
-      }
-
-      h2 {
-        font-size: 1.5em;
-        margin: 0 0 0 30px;
-        color: #666;
-      }
-
-      .quotes {
-        display: none;
-      }
-
-      .social-media {
-        margin: 3% 0 10% 30px;
-      }
-      .social-media a {
-        padding: 0px 8px;
-        color: #000;
-        font-size: 20px;
-      }
-      .social-media a:hover, .social-media a:visited {
-        text-decoration: none;
-      }
-    </style>
 
       <div class="container">
         <h1 style="">Richard Littauer</h1>
@@ -103,6 +74,11 @@
           <a href="http://www.flickr.com/photos/101526362@N04/"><i class="fa fa-flickr"></i></a>
           <a href="http://www.last.fm/user/RichardFenn"><i class="fa fa-lastfm"></i></a>
         </div>
+
+        <h3 class="blog">
+          <a href="/archive">Blog</a>
+        </h3>
+
 
           {{ content }}
 
