--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -5,7 +5,6 @@ body {
 }
 .content {
   padding-bottom: 200px;
-  max-width: 900px;
 }
 body#index {
   .wrapper {
@@ -16,11 +15,13 @@ body#index {
     color: red;
   }
 }
+
+.subpage {
+  max-width: 900px;
+}
+
 .wrapper {
   margin-top: 20px;
- .container {
-    max-width: 900px;
-  }
 }
 .navbar {
   margin-bottom: 0;
@@ -174,11 +175,9 @@ h1 {
   opacity: 0.8;
 }
 a {
-  color: #990;
+  color: black;
+  cursor: pointer;
   text-decoration: none;
-  letter-spacing: 0px;
-  padding: 10px;
-  width: inherit;
   &:hover {
     color: red;
   }
