--- a/_includes/themes/minimalber/post.html
+++ b/_includes/themes/minimalber/post.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
   <div class="row-fluid">
-    <div class="col-md-8">
+    <div class="col-md-8 post">
       {{ content }}
       <hr>
       <div class="pagination">
