Add Google verification

--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="{{ site.author.name }}">
     <meta name="copyright" content="&copy; {{ site.author.name }} 2015">
-        <meta name="description" content="My personal website, where I list all of my main projects and occasionally blog.">
+    <meta name="description" content="My personal website, where I list all of my main projects and occasionally blog.">
+
+    <meta name="google-site-verification" content="8QqLkBKn1EYwbbAcD3TzbJpc8Zgni2mRuEhnlUeoGVg" />
 
     <meta property="og:description" content="My personal website, where I list all of my main projects and occasionally blog." />
     <meta property="og:url" content="http://burntfen.com/" />
