--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -74,6 +74,7 @@
           <a href="https://dribbble.com/richlitt"><i class="fa fa-dribbble"></i></a>
           <a href="http://www.flickr.com/photos/101526362@N04/"><i class="fa fa-flickr"></i></a>
           <a href="http://www.last.fm/user/RichardFenn"><i class="fa fa-lastfm"></i></a>
+          <a href="https://angel.co/richlitt"><i class="fa fa-angellist"></i></a>
         </div>
 
         {{ content }}
