--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -237,3 +237,20 @@ a {
 .post p>img {
   max-width: 100%;
 }
+
+.project-page-title {
+  margin-left: 30px;
+}
+
+#project-page {
+  .project-image {
+    max-width: 100%
+  }
+  h4 {
+    margin-top: 0;
+  }
+  .role {
+    font-size: 18px;
+    font-weight: 200;
+  }
+}
