--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -72,7 +72,7 @@
 
 
               <footer>
-              <p>Send me a letter: <a href="mailto:richard.littauer@gmail.com">richard.littauer@gmail.com</a></p>
+              <p>Send me a letter: <a href="mailto:richard@burntfen.com">richard@burntfen.com</a></p>
           <p>{{ site.author.name }} &copy; <script type="text/javascript">
             document.write(new Date().getFullYear());
           </script>.
