--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -56,7 +56,7 @@
   <body id="index">
     <div class="wrapper">
       <div class="container">
-        <h1 style="">Richard Littauer</h1>
+        <h1>Richard Littauer</h1>
         <h2 class="quotes" style="display:block">Developer</h2>
         <h2 class="quotes">Nomad</h2>
         <h2 class="quotes">Linguist</h2>
