Moving index out of index.html file

--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -77,7 +77,40 @@
           <a href="https://angel.co/richlitt"><i class="fa fa-angellist"></i></a>
         </div>
 
-        {{ content }}
+        <div class="posts">
+          {% for post in site.posts limit:3 %}
+          <a href="{{ BASE_PATH }}{{ post.url }}">{{ post.title }}</a><br />
+          {% endfor %}
+          <a class="more" href="/archive">More posts...</a>
+        </div>
+
+        <div class="row col-md-12 projects">
+          {% assign projects = (site.projects | sort: 'ranking') %}
+          {% for project in projects %}
+            {% assign loopindex = forloop.index | modulo: 3 %}
+            {% if loopindex == 1 %}
+              <div class="col-xs-6 col-sm-4 col-md-3" style="margin-left:0px;">
+            {% else %}
+              <div class="col-xs-6 col-sm-4 col-md-3">
+            {% endif %}
+                <div class="img-container">
+                  <a href="{{ project.url }}">
+                    <img src="assets/img/projects/{{ project.picture }}" class="card-image"/>
+                  </a>
+                </div>
+                <a class="project-title" href="{{ project.url }}">
+                  <h4>
+                    {{ project.title }}
+                  </h4>
+                  <p>{{ project.stub}}<br />
+                  {{ project.role }} <span class="status">{{ project.status }}</span></p>
+                </a>
+              </div>
+          {% endfor %}
+        </div>
+            {% endif %}
+          {% endfor %}
+        </div>
 
          <footer>
          <p>Send me a letter: <a href="mailto:richard.littauer@gmail.com">richard.littauer@gmail.com</a></p>
