--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -86,7 +86,7 @@
 
         <div class="row col-md-12 projects">
           {% assign projects = (site.projects | sort: 'ranking') %}
-          {% for project in projects %}
+          {% for project in projects limit:16 %}
             {% assign loopindex = forloop.index | modulo: 3 %}
             {% if loopindex == 1 %}
               <div class="col-xs-6 col-sm-4 col-md-3" style="margin-left:0px;">
@@ -106,6 +106,9 @@
                   {{ project.role }} <span class="status">{{ project.status }}</span></p>
                 </a>
               </div>
+            {% if loopindex == 4 %}
+              <div class="clearfix visible-sm-block"></div>
+            {% endif %}
           {% endfor %}
         </div>
             {% endif %}
