--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -111,7 +111,26 @@
             {% endif %}
           {% endfor %}
         </div>
+
+        <div class="row col-md-12 press">
+          <hr />
+          <h1 style="text-align:center;margin-top:100px;margin-bottom:60px;">Press</h1>
+          {% for press in site.data.press %}
+            {% if forloop.index == 7 %}
+              <div class="col-xs-4 col-sm-3 col-md-2 col-md-offset-2">
+            {% elsif forloop.index == 9 %}
+              <div class="col-xs-4 col-sm-3 col-sm-offset-3 col-md-2 col-md-offset-0">
+            {% elsif forloop.index == 10 %}
+              <div class="col-xs-4 col-xs-offset-4 col-sm-3 col-sm-offset-0 col-md-2">
+            {% else %}
+              <div class="col-xs-4 col-sm-3 col-md-2">
             {% endif %}
+              <div class="img-container">
+                <a href="{{ press.url }}" title="{{ press.title }}">
+                  <img src="assets/img/press/{{ press.image }}" class="card-image">
+                </a>
+              </div>
+            </div>
           {% endfor %}
         </div>
 
