--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -135,7 +135,7 @@
         </div>
 
          <footer>
-         <p>Send me a letter: <a href="mailto:richard.littauer@gmail.com">richard.littauer@gmail.com</a></p>
+         <p>Send me a letter: <a href="mailto:richard@burntfen.com">richard@burntfen.com</a></p>
           <p>{{ site.author.name }} &copy; <script type="text/javascript">document.write(new Date().getFullYear())</script>.
             <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>.
           </p>
