--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -134,6 +134,47 @@
           {% endfor %}
         </div>
 
+      </div>
+    </div>
+
+
+
+    <div class="wrapper" style="padding-right:0px">
+      <div class="container">
+
+        <div class="row col-md-12 projects">
+          <h1 style="text-align:center;margin-top:100px;margin-bottom:60px;">Other Projects</h1>
+          {% assign projects = (site.projects | sort: 'ranking') %}
+          {% for project in projects offset:16 %}
+            {% assign loopindex = forloop.index | modulo: 3 %}
+            {% if loopindex == 1 %}
+              <div class="col-xs-6 col-sm-4 col-md-3" style="margin-left:0px;">
+            {% else %}
+              <div class="col-xs-6 col-sm-4 col-md-3">
+            {% endif %}
+                <div class="img-container">
+                  <a href="{{ project.url }}">
+                    <img src="assets/img/projects/{{ project.picture }}" class="card-image"/>
+                  </a>
+                </div>
+                <a class="project-title" href="{{ project.url }}">
+                  <h4>
+                    {{ project.title }}
+                  </h4>
+                  <p>{{ project.stub}}<br />
+                  {{ project.role }} <span class="status">{{ project.status }}</span></p>
+                </a>
+              </div>
+              {% if forloop.index == 3 %}
+                <div class="clearfix visible-sm-block"></div>
+              {% elsif forloop.index == 4 %}
+                <div class="clearfix visible-md-block"></div>
+              {% elsif forloop.index == 16 %}
+                <div class="clearfix visible-md-block"></div>
+              {% endif %}
+          {% endfor %}
+        </div>
+
          <footer>
          <p>Send me a letter: <a href="mailto:richard@burntfen.com">richard@burntfen.com</a></p>
           <p>{{ site.author.name }} &copy; <script type="text/javascript">document.write(new Date().getFullYear())</script>.
