Added contact section

--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -141,6 +141,33 @@
       </div>
     </div>
 
+    <div class="wrapper" style="margin-right:0px;background-color:#111;color:#FFF;">
+      <div class="container">
+        <div class="row col-md-12 press" >
+          <div class="col-sm-5 col-sm-offset-1 col-md-5 col-md-offset-1" style="text-align:left;color:#999;">
+            <h1 style="margin:100px 0px 50px 0px;color:#fff">Speak</h1>
+            <div style="font-size:25px;line-height:30px;">
+              <p><a href="mailto:richard@burntfen.com" style="font-weight:200;color:#219FFF;">richard@burntfen.com</a></p>
+              <p>I build things, make art, code tools, write words, have fun.</p>
+              <p>I am available for…</p>
+              <p class="visible-xs" style="color:#FFF;text-align:center;margin: 50px auto; font-size:25px;line-height:30px;">Writing • Talks • UX • Code • Walks • Letters • Collaboration • Ideas • Joy • Design • Projects</p>
+            </div>
+          </div>
+          <div class="col-sm-5 col-md-5 listen" style="color:#999;">
+            <hr class="visible-xs" style="width:50%;">
+            <h1 style="color:#fff; margin: 100px auto 50px auto;">Listen</h1>
+            <div style="font-size:25px;line-height:30px;">
+              <p><a href="mailto:richard@burntfen.com" style="font-weight:200;color:#219FFF;">tinyletter.com/richlitt</a></p>
+              <p>I write a weekly newsletter, from me to your inbox.</p>
+              <p class="hidden-xs">I write about…</p>
+            </div>
+          </div>
+          </div>
+        <div class="row col-md-8 col-md-offset-2 hidden-xs">
+          <p style="color:#FFF;text-align:center;margin: 50px auto 100px auto; font-size:25px;line-height:30px;">Writing • Talks • UX • Code • Walks • Letters • Collaboration • Ideas • Joy • Design • Projects</p>
+        </div>
+      </div>
+    </div>
 
 
     <div class="wrapper" style="padding-right:0px">
