Removed inline style

--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -170,7 +170,7 @@
     </div>
 
 
-    <div class="wrapper" style="padding-right:0px">
+    <div class="wrapper">
       <div class="container">
 
         <div class="row col-md-12 projects">
