--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -200,6 +200,20 @@ a {
 }
 
 
+
+#project-page {
+  .project-image {
+    max-width: 100%
+  }
+  h4 {
+    margin-top: 0;
+  }
+  .role {
+    font-size: 18px;
+    font-weight: 200;
+  }
+}
+
 @media (max-width: 767px) {
   .wrapper {
     margin-left: 0px;
@@ -232,6 +246,14 @@ a {
       padding-top: 10px;
     }
   }
+  #project-page {
+    h4 {
+      margin-top: 20px;
+    }
+    .project-image {
+      max-width: 300px;
+    }
+  }
 }
 
 .post p>img {
@@ -240,17 +262,4 @@ a {
 
 .project-page-title {
   margin-left: 30px;
-}
-
-#project-page {
-  .project-image {
-    max-width: 100%
-  }
-  h4 {
-    margin-top: 0;
-  }
-  .role {
-    font-size: 18px;
-    font-weight: 200;
-  }
 }
