--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -115,29 +115,6 @@
             {% endif %}
           {% endfor %}
         </div>
-
-        <div class="row col-md-12 press">
-          <hr />
-          <h1 class="section-header">Press</h1>
-          {% for press in site.data.press %}
-            {% if forloop.index == 7 %}
-              <div class="col-xs-4 col-sm-3 col-md-2 col-md-offset-2">
-            {% elsif forloop.index == 9 %}
-              <div class="col-xs-4 col-sm-3 col-sm-offset-3 col-md-2 col-md-offset-0">
-            {% elsif forloop.index == 10 %}
-              <div class="col-xs-4 col-xs-offset-4 col-sm-3 col-sm-offset-0 col-md-2">
-            {% else %}
-              <div class="col-xs-4 col-sm-3 col-md-2">
-            {% endif %}
-              <div class="img-container">
-                <a href="{{ press.url }}" title="{{ press.title }}">
-                  <img src="assets/img/press/{{ press.image }}" class="card-image">
-                </a>
-              </div>
-            </div>
-          {% endfor %}
-        </div>
-
       </div>
     </div>
 
@@ -170,6 +147,34 @@
 
     <div class="wrapper">
       <div class="container">
+
+        <div class="row col-md-12 press">
+          <h1 class="section-header">Press</h1>
+          {% for press in site.data.press %}
+            {% if forloop.index == 7 %}
+              <div class="col-xs-4 col-sm-3 col-md-2 col-md-offset-2">
+            {% elsif forloop.index == 9 %}
+              <div class="col-xs-4 col-sm-3 col-sm-offset-3 col-md-2 col-md-offset-0">
+            {% elsif forloop.index == 10 %}
+              <div class="col-xs-4 col-xs-offset-4 col-sm-3 col-sm-offset-0 col-md-2">
+            {% else %}
+              <div class="col-xs-4 col-sm-3 col-md-2">
+            {% endif %}
+              <div class="img-container">
+                <a href="{{ press.url }}" title="{{ press.title }}">
+                  <img src="assets/img/press/{{ press.image }}" class="card-image">
+                </a>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+
+      </div>
+    </div>
+
+    <div class="wrapper" id="other-projects">
+      <div class="container">
+
         <div class="row col-md-12 projects">
           <h1 class="section-header">Other Projects</h1>
           {% assign projects = (site.projects | sort: 'ranking') %}
