--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -69,8 +69,8 @@ $leftPadding: 15px;
 
   h1.section-header {
     text-align:center;
-    margin-top:100px;
-    margin-bottom:60px;
+    margin-top:50px;
+    margin-bottom:50px;
   }
 
   a.project-title {
@@ -101,6 +101,10 @@ $leftPadding: 15px;
     text-align: right;
   }
 
+  #other-projects {
+    background-color: #E5E5E5;
+  }
+
   #contact {
     margin-right:0px;
     background-color:#111;
@@ -118,7 +122,7 @@ $leftPadding: 15px;
     }
 
     .speak, .listen {
-      color:#999;
+      color:#BFBFBF;
       h1 {
         margin:100px 0px 50px 0px;
         color:#fff
