Fix 1200px screens clearfix

--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -109,9 +109,9 @@
             {% if forloop.index == 3 %}
               <div class="clearfix visible-sm-block"></div>
             {% elsif forloop.index == 4 %}
-              <div class="clearfix visible-md-block"></div>
+              <div class="clearfix visible-md-block visible-lg-block"></div>
             {% elsif forloop.index == 12 %}
-              <div class="clearfix visible-md-block"></div>
+              <div class="clearfix visible-md-block visible-lg-block"></div>
             {% endif %}
           {% endfor %}
         </div>
@@ -201,9 +201,9 @@
               {% if forloop.index == 3 %}
                 <div class="clearfix visible-sm-block"></div>
               {% elsif forloop.index == 4 %}
-                <div class="clearfix visible-md-block"></div>
+                <div class="clearfix visible-md-block visible-lg-block"></div>
               {% elsif forloop.index == 16 %}
-                <div class="clearfix visible-md-block"></div>
+                <div class="clearfix visible-md-block visible-lg-block"></div>
               {% endif %}
           {% endfor %}
         </div>
