--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -132,7 +132,7 @@
             <hr class="visible-xs">
             <h1 >Listen</h1>
             <div>
-              <p><a href="mailto:richard@burntfen.com">tinyletter.com/richlitt</a></p>
+              <p><a href="https://tinyletter.com/richlitt">tinyletter.com/richlitt</a></p>
               <p>I write a weekly newsletter, from me to your inbox.</p>
               <p class="hidden-xs">I write about…</p>
             </div>
