--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -204,6 +204,8 @@
                 <div class="clearfix visible-md-block visible-lg-block"></div>
               {% elsif forloop.index == 16 %}
                 <div class="clearfix visible-md-block visible-lg-block"></div>
+              {% elsif forloop.index == 20 %}
+                <div class="clearfix visible-md-block visible-lg-block"></div>
               {% endif %}
           {% endfor %}
         </div>
