added newsletter higher

--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -84,6 +84,10 @@
           <a class="more" href="/archive">More posts...</a>
         </div>
 
+        <div class="newsletter">
+          <a class="more" href="https://tinyletter.com/richlitt">Start reading my weekly newsletter</a></p>
+        </div>
+
         <div class="row col-md-12 projects">
           {% assign projects = (site.projects | sort: 'ranking') %}
           {% for project in projects limit:16 %}
