Added Sailor and Trekker

--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -61,9 +61,11 @@
         <h2 class="quotes">Nomad</h2>
         <h2 class="quotes">Linguist</h2>
         <h2 class="quotes">Poet</h2>
-        <h2 class="quotes">UX Designer</h2>
+        <h2 class="quotes">Designer</h2>
         <h2 class="quotes">Organizer</h2>
+        <h2 class="quotes">Sailor</h2>
         <h2 class="quotes">Writer</h2>
+        <h2 class="quotes">Trekker</h2>
         <h2 class="quotes">Creator</h2>
 
         <div class='social-media'>
