Fix twitter card
Closes #31

--- a/_includes/themes/minimalber/default.html
+++ b/_includes/themes/minimalber/default.html
@@ -20,11 +20,11 @@
     <meta property="og:image:height" content="515" />
 
     <!-- Twitter: card tags -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@richlitt" />
     <meta name="twitter:title" content="Richard Littauer">
     <meta name="twitter:description" content="My personal website, where I list all of my main projects and occasionally blog.">
     <meta name="twitter:image" content="http://burntfen.com/assets/img/avatar.png">
-    <meta name="twitter:url" content="http://burntfen.com">
 
     <!-- Open Source Protocol -->
     <link rel="profile" href="http://osprotocol.com" />
