Added the retronaut webring

--- a/_includes/themes/minimalber/index.html
+++ b/_includes/themes/minimalber/index.html
@@ -218,6 +218,8 @@
 
          <footer>
          <p>Send me a letter: <a href="mailto:richard@burntfen.com">richard@burntfen.com</a></p>
+         <p><a href='http://webring.dinhe.net/prev/burntfen.com'>Previous</a> (<a href="http://webring.dinhe.net/">Join the retronaut webring.</a>) <a href='http://webring.dinhe.net/next/burntfen.com'>Next</a>
+          </p>
           <p>{{ site.author.name }} &copy; <script type="text/javascript">document.write(new Date().getFullYear())</script>.
             <a href="https://github.com/RichardLitt/richardlitt.github.com">Source</a>.
           </p>
